# stregsystemet-rs

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  docker-compose.yaml  flake.nix  readme.md
.github/: dependabot.yml
.github/workflows/: docker.yaml  nix.yml  rust.yml
.sqlx/: query-2619dd0d36c24279b6b33d314c91e4dd942f1ea471592801d48a5a91bef8893c.json  query-2854891e031c091752e251667ad0d4e345452648a1e3726a4739f4bd77838289.json  query-4341befd16253530f3558f734faa2ae3c5c77eda4ee4bf7b58a9e1d3401e2817.json  query-495dd0a6d7971beb6dd0c3b84571d5d27a812119fd0a8c4c115c5de912ebe9cf.json  query-7e9c5b579a7e36b81672a0ccac0ea31c5f1fbafea19d1bf841d9d5feeac87dbc.json  query-839b5cdaeb8a32887b6b7d225c7c336808bbf26d726915a135a180d19c889a94.json  query-983fec92aeeb98ce95846a18b7aeb7a5cff2603513dcbef777d3c84637e4e4e9.json  query-ba1e9964c5b4f5262fbdcffa23be3c6398158a57ff5af345c6f405ed694f0cbf.json  query-d32c5bda7ab57dc56c838a3853fa7622e7e468a2e9f73babd7029f37ad615ca8.json  query-daa76fc1caa1e639aab51eecdf66a7000a145153741317c6aa76a0842cd4f81a.json  query-fb202359031b163116490103f37688c6f492c0badf291932c37c0ac16e6d5e55.json
fixtures/: deposits.sql  product_aliases.sql  products.sql  rooms.sql  users.sql
migrations/: 0001_initial.sql
scripts/: init_db.bat  init_db.sh  populate_sample_data.bat  populate_sample_data.sh  sample_data.sql  start_postgres.bat  start_postgres.sh  stop_postgres.bat  stop_postgres.sh
src/: components.rs  dso.rs  main.rs  protocol.rs  responses.rs
src/components/: product_menu_components.rs  quickbuy_component.rs
src/dso/: product.rs  streg_cents.rs  user.rs
src/protocol/: buy_request.rs  news.rs  products.rs  rooms.rs  users.rs
src/protocol/products/: active_products_response.rs
src/quickbuy/: executor.rs  parser.rs
src/responses/: result_json.rs
static/: api.js  base.js  index.html  main.css  main.js  menu.js  product-table.js  theme.js
static/themes/: definitions.json
static/themes/bat/: bat.css  bat.js
templates/: 404.html  base.html  index.html  menu.html
(+2 files in other folders)
