[package]
name = "stregsystemet-rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tokio = { version = "1.44", features = ["full"] }
sqlx = { version = "0.8", features = ["postgres", "macros", "migrate", "runtime-tokio", "chrono", "uuid"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "3.12", features = ["chrono_0_4"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
derive_more = { version = "2.0", features = ["full"] }
tower = { version = "0.5", features = ["util", "timeout"] }
tower-http = { version = "0.6.2", features = ["fs", "trace"] }
thiserror = "2.0.11"
bytes = "1.10"
mime = "0.3.16"
mime_guess = "2.0.5"
lru = "0.13.0"
http-body-util = "0.1.0"
httpdate = "1.0.3"
lazy_static = "1.5.0"
rand = "0.9.0"
